--- a/ecommerce/src/main/resources/templates/cart.html
+++ b/ecommerce/src/main/resources/templates/cart.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<head  th:replace="fragments :: head"></head>
+<head  th:replace="fragments/fragment :: head"></head>
 
 <body>
-    <div th:replace="fragments :: navbar" ></div>  
+    <div th:replace="fragments/fragment :: navbar" ></div>  
     <main role="main">
         <div class="container">
             <div class="row">
@@ -55,6 +55,6 @@
             </div>
         </div>
     </main>
-    <div th:replace="fragments :: footer"></div>
+    <div th:replace="fragments/fragment :: footer"></div>
 </body>
 </html>
