--- a/ecommerce/src/main/resources/templates/main.html
+++ b/ecommerce/src/main/resources/templates/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en>
-<head th:replace="fragments :: head>
-    <title>Document</title>
-</head>
+<head  th:replace="fragments/fragment :: head"></head>
+
+
 <body>
-    <div th:replace="fragments :: navbar"></div>
+    <div th:replace="fragments/fragment :: navbar"></div>
     <main role="main"> 
         <div class="jumbotron">
             <div class="container">
@@ -51,6 +51,6 @@
     </div>
     </main>
 
-    <footer th:replace="fragments :: footer"></footer>
+    <footer th:replace="fragments/fragment :: footer"></footer>
 </body>
 </html>
