--- a/ecommercepage/src/main/resources/templates/product.html
+++ b/ecommercepage/src/main/resources/templates/product.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="fragments/fragment :: head">
     
 </head>
