--- a/ecommercepage/src/main/resources/templates/fragments/fragment.html
+++ b/ecommercepage/src/main/resources/templates/fragments/fragment.html
@@ -6,24 +6,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <style>
-        html, body, main {
-            height: 100%;
-        }
- 
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
- 
-        .large-product-card .card-body {
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-    </style>
+  
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div th:fragment="navbar">
@@ -91,4 +76,5 @@
 </footer>
 </body>
 </html>
+
 
