--- a/ecommercepage/src/main/resources/templates/cart.html
+++ b/ecommercepage/src/main/resources/templates/cart.html
@@ -19,15 +19,15 @@
                     </thead>
                     <tbody>
                         <tr th:each="item : ${cart}" th:with="product=${item.key}">
-                            <td style="width: 10%; padding-left: 0"><img th:src="${product.image}" style="width: 100%; max-height: 80px"/></td>
+                            <td style="width: 10%; padding-left: 0"><img th:src="@{${product.imageURL}}" style="width: 100%; max-height: 80px"/></td>
                             <td th:text="${product.name}"></td>
                             <td>
                                 <input type="hidden" name="id" th:value="${product.id}" form="updateForm" />
                                 <input type="number" name="quantity" min="0" th:value="${item.value}" form="updateForm" />
                             </td>
-                            <td th:if="${list.add(product.price * item.value)}" th:text="${#numbers.formatCurrency(product.price * item.value)}"></td>
+                            <td th:if="${list.add(product.price * item.value)}" th:text="${#numbers.formatCurrency(product.price)}"></td>
                             <td>
-                                <form th:action="@{/cart}" method="post" style="display: inline">
+                                <form th:action="@{/cart}" method="GET" style="display: inline">
                                     <input type="hidden" name="_method" value="DELETE" />
                                     <input type="hidden" name="id" th:value="${product.id}" />
                                     <button class="btn btn-danger" style="display: inline" type="submit">Delete</button>
@@ -53,6 +53,24 @@
                 </form>
                 <div th:if="${cart.size() == 0}">Nothing in your cart yet.</div>
             </div>
+            <form action='/charge' method='POST' id='checkout-form'>
+                <input type='hidden' th:value='${amount}' name='amount' />
+                <label>Price:<span th:text='${amount}' ></label>
+                <!-- NOTE: data-key/data-amount/data-currency will be rendered by Thymeleaf -->
+                <script
+                   src='https://checkout.stripe.com/checkout.js' 
+                   class='stripe-button'
+                   th:attr='data-key=${stripePublicKey}, 
+                     data-amount=${amount}, 
+                     data-currency=${currency}'
+                   data-name='Baeldung'
+                   data-description='Spring course checkout'
+                   data-image
+                     ='https://www.baeldung.com/wp-content/themes/baeldung/favicon/android-chrome-192x192.png'
+                   data-locale='auto'
+                   data-zip-code='false'>
+               </script>
+            </form>
         </div>
     </main>
     <div th:replace="fragments/fragment :: footer"></div>
