--- a/ecommercepage/src/main/resources/templates/main.html
+++ b/ecommercepage/src/main/resources/templates/main.html
@@ -14,22 +14,31 @@
           </div>
       </div>
 
-    <div class="container">
-      <h1>Products</h1>
-      <div class="card-body">
-        <div th:each ="product : ${product}">
-          <img th:src="${product.image}">
-              <h5 th:text="${product.brand}"></h5>
+      <!-- Product Section -->
+    
+  <div class="container">
+    <div class="row d-flex justify-content-around">
+    <div th:each ="product : ${products}">
+      <div class="card">
+          <div class="card-body">
+            <div class="column">
+          <img th:src="@{${product.imageURL}}">
+          </div>
+              <div class="card-footer">
               <h5 th:text="${product.name}"></h5>
-              <p class="card-text">Description: <span th:text=${product.description}></span></p>
-              <p class="card-text">Price <span th:text=${product.price}></span></p>
-            </div> 
+              <h6 th:text="${product.brand}"></h6>
+              <p class="card-text">Price <span th:text="${#numbers.formatCurrency(product.price)}"></span></p>
+              <a href="#" th:href="@{'/product/{id}'(id=${product.id})}" class="btn btn-primary">See More</a>
+            </div>
             </div>
           </div>
         </div>
+      </div>
+    </div>
+     
+          
+          
     
-
-    <script src="js/products.js" type="text/javascript"></script>
   </main>
  
   <footer th:replace="fragments/fragment :: footer"></footer>
